# theme_studio

./: MANIFEST.in  README.md  index.html  install.sh  license.txt  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
src/: App.tsx  styles.css
src/components/: AuthScreen.tsx  Dashboard.tsx  TaskCard.tsx  TaskForm.tsx  ThemePicker.tsx
src/lib/: auth.tsx  supabase.ts  theme.ts
supabase/migrations/: 20260630202603_create_tasks_table.sql
theme_studio/: api.py  hooks.py  install.py  modules.txt  patches.txt  presets.py  test_api.py
theme_studio/config/: desktop.py
theme_studio/patches/: install_default_themes.py
theme_studio/public/css/: shadcn_desk.css  shadcn_sidebar.css
theme_studio/public/js/: theme_studio_boot.js  theme_studio_color_engine.js  theme_studio_sidebar.js
theme_studio/theme_studio/doctype/theme_studio_settings/: theme_studio_settings.json  theme_studio_settings.py
theme_studio/theme_studio/doctype/theme_studio_theme/: test_theme_studio_theme.py  theme_studio_theme.json  theme_studio_theme.py
theme_studio/theme_studio/page/theme_studio/: theme_studio.css  theme_studio.js  theme_studio.json
